# shiboken2_minimal

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.rst  application.cpp  application.h  example.py  main.cpp  mainwindow.cpp  mainwindow.h  pyfoo.h  pyfoo.txt.in  pyfoo.xml  pyside2_config.py
